# dotfiles_manager

./: .flake8  .gitignore  .pyre_configuration  Makefile  README.md  pyproject.toml
src/dotfiles_manager/: cli.py
src/dotfiles_manager/subcommands/: submodules.py
src/dotfiles_manager/utils/: dotfiles.py
tests/: conftest.py  test_cli.py
tests/core/: test_submodules.py
